recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:32: error: expected start of definition
	override def run() {
                 ^SquareKoch:35: error: Unmatched closing brace '}' ignored here
}
^